DTS-45927: GS backlog active sprint filter.
Change-log: Manually moving backlog active sprint code to GS 11.0.0