@@ -139,12 +139,11 @@ public class BacklogEpicProgressServiceImpl extends JiraBacklogKPIService<Intege
 			List<JiraIssue> totalJiraIssue = getBackLogJiraIssuesFromBaseClass();
 			resultListMap.put(TOTAL_ISSUES, totalJiraIssue);
 			// get Epics Linked to backlogStories stories
-			final List<String> epicKeyList = totalJiraIssue.stream().map(JiraIssue::getEpicLinked).toList();
-			Set<JiraIssue> epicJiraIssues = totalJiraIssue.stream()
-					.filter(j -> epicKeyList.contains(j.getNumber())
-							&& j.getTypeName().equalsIgnoreCase(NormalizedJira.ISSUE_TYPE.getValue()))
-					.collect(Collectors.toSet());
-			resultListMap.put(EPIC_LINKED, epicJiraIssues);
+			resultListMap.put(EPIC_LINKED,
+					jiraIssueRepository.findNumberInAndBasicProjectConfigIdAndTypeName(
+							totalJiraIssue.stream().map(JiraIssue::getEpicLinked).collect(Collectors.toList()),
+							leafNode.getProjectFilter().getBasicProjectConfigId().toString(),
+							NormalizedJira.ISSUE_TYPE.getValue()));
 			// get status category of the project
 			resultListMap.put(RELEASE_JIRA_ISSUE_STATUS, getJiraIssueReleaseStatus());
 		}
